changed order of sections, fixed video cropping in desktop

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -57,6 +57,7 @@ h2 {
     font-weight: 900;
     text-align: center;
     margin-top: 0px;
+    color: white !important;
 }
 
 h3 {
