--- a/CSS/projects/video.css
+++ b/CSS/projects/video.css
@@ -1,6 +1,6 @@
 .videoContainer {
     width: 100%;
-    width: calc(min(100%, 100vh));
+    width: calc(min(100vw, 100vh));
     max-width: calc(min(120vh, 100vw));
     /* min-width:calc(min(100%,400px)); */
     margin: auto;
@@ -11,8 +11,14 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    overflow: hidden;
     height: 80vh !important;
+
+}
+
+@media screen and (max-aspect-ratio:8/6) {
+    .videoContainer {
+        overflow: hidden;
+    }
 }
 
 video {
